--- a/static_v2/scss/pages/_progressPage.scss
+++ b/static_v2/scss/pages/_progressPage.scss
@@ -634,6 +634,11 @@
       }
     }
 
+    #engagement-block.engagement-data {
+      margin-bottom: 0;
+      padding-bottom: 2.5rem;
+    }
+
     table {
       display: block;
       width: 100%;
